--- a/memory-vista/package.json
+++ b/memory-vista/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@hookform/resolvers": "^3.3.4",
+    "@types/uuid": "^10.0.0",
     "clsx": "^2.1.0",
     "firebase": "^9.23.0",
     "next": "14.1.0",
@@ -20,6 +21,7 @@
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.50.1",
     "tailwind-merge": "^2.2.1",
+    "uuid": "^11.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
