--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "init-admin": "node scripts/init-admin-settings.js"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
