--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
-    "firebase": "10.7.1",
+    "firebase": "^11.8.1",
     "firebase-admin": "^13.4.0",
     "framer-motion": "^11.18.2",
     "lru-cache": "^11.1.0",
