--- a/package.json
+++ b/package.json
@@ -63,11 +63,19 @@
     "resend": "^4.5.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
+    "typescript": "^5.8.3",
     "undici": "^5.29.0",
     "uuid": "^11.1.0",
     "yup": "^1.6.1",
     "zod": "^3.22.4",
-    "zustand": "^5.0.5"
+    "zustand": "^5.0.5",
+    "@types/node": "^20.17.52",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "13.5.6"
   },
   "devDependencies": {
     "@babel/core": "^7.27.1",
@@ -84,18 +92,11 @@
     "@types/firebase": "^2.4.32",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.17",
-    "@types/node": "^20.17.52",
     "@types/node-fetch": "^2.6.12",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.0",
     "@types/react-router-dom": "^5.3.3",
-    "@typescript-eslint/eslint-plugin": "^7.0.0",
-    "@typescript-eslint/parser": "^7.0.0",
     "babel-jest": "^30.0.0-beta.3",
     "babel-loader": "^10.0.0",
     "diff-match-patch": "^1.0.5",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "13.5.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -103,7 +104,6 @@
     "node-fetch": "^2.7.0",
     "react-router-dom": "^7.6.1",
     "ts-jest": "^29.3.4",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "ts-node": "^10.9.2"
   }
 }
