--- a/package.json
+++ b/package.json
@@ -75,25 +75,19 @@
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "eslint": "^8.56.0",
-    "eslint-config-next": "13.5.6"
-  },
-  "devDependencies": {
+    "eslint-config-next": "13.5.6",
+    "react-router-dom": "^7.6.1",
+    "@types/react-router-dom": "^5.3.3",
     "@babel/core": "^7.27.1",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/preset-env": "^7.27.2",
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
-    "@firebase/rules-unit-testing": "^4.0.1",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^14.3.1",
-    "@testing-library/react-hooks": "^8.0.1",
-    "@testing-library/user-event": "^14.6.1",
     "@types/firebase": "^2.4.32",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.17",
     "@types/node-fetch": "^2.6.12",
-    "@types/react-router-dom": "^5.3.3",
     "babel-jest": "^30.0.0-beta.3",
     "babel-loader": "^10.0.0",
     "diff-match-patch": "^1.0.5",
@@ -102,8 +96,14 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-watch-typeahead": "^2.2.2",
     "node-fetch": "^2.7.0",
-    "react-router-dom": "^7.6.1",
     "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2"
+  },
+  "devDependencies": {
+    "@firebase/rules-unit-testing": "^4.0.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^14.3.1",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.6.1"
   }
 }
